@@ -406,6 +406,16 @@ Get the preview buffer\.
 Get the image buffer\.
 .RE
 .PP
+\fBget_buffer_type\fR
+.RS 4
+Get the current buffer type for images downloaded from the camera (DNG or PEF)\.
+.RE
+.PP
+\fBset_buffer_type\fR \fIBUFFER_TYPE\fR
+.RS 4
+Set the buffer type for images downloaded from the camera (defaults to DNG, valid values are "DNG" or "PEF")\.
+.RE
+.PP
 \fBset_shutter_speed\fR \fISHUTTER_SPEED\fR
 .RS 4
 Set shutter speed\.
